Rename image file from ente$ to entedollar

--- a/memory.html
+++ b/memory.html
@@ -161,7 +161,7 @@
 
   // genau die 7 Dateien, jede zweimal (URL-encoding für $)
   const requiredImages = [
-    'imgs/ente%24.avif',
+    'imgs/entedollar.avif',
     'imgs/ente1.webp',
     'imgs/ente2.jpg',
     'imgs/ente3.jpg',
