Fix image source filename for duck image

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <h1>🦆 World of Ducks</h1>
     </header>
 
-    <img src="imgs/ente%24.avif" alt="Ente links" class="duck-decor left">
+    <img src="imgs/entedollar.avif" alt="Ente links" class="duck-decor left">
     <img src="imgs/ente3.jpg" alt="Ente rechts" class="duck-decor right">
 
     <main class="main">
