Update image source for Wirtschaft blog card

--- a/blogs.html
+++ b/blogs.html
@@ -168,7 +168,7 @@
 
         <!-- Wirtschaft -->
         <a href="#" class="blog-card">
-          <img src="imgs/ente$.avif" alt="Wirtschaft Ente">
+          <img src="imgs/entedollar.avif" alt="Wirtschaft Ente">
           <h3>💰 Wirtschaft</h3>
           <p>Vom Federmarkt bis zur Brotkrumenbörse – hier wird Kapitalismus neu bequackt.</p>
         </a>
