Update link for Karl Marx blog card

--- a/blogs.html
+++ b/blogs.html
@@ -139,7 +139,7 @@
         </a>
 
         <!-- Karl Marx & Friends -->
-        <a href="#" class="blog-card">
+        <a href="blog-marx.html" class="blog-card">
           <img src="imgs/ente4.jpg" alt="Karl Marx Ente">
           <h3>📚 Karl Marx & Friends</h3>
           <p>Philosophische Diskussionen über Kapitalismus im Ententeich und die Revolution der Federn.</p>
@@ -181,3 +181,4 @@
   </div>
 </body>
 </html>
+
