--- a/index.html
+++ b/index.html
@@ -1,148 +1,95 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>World of Ducks — Start</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
   <style>
-    /* --- MEMORY STYLE --- */
-    :root {
-      --bg-wood: url('https://www.transparenttextures.com/patterns/wood-pattern.png'); /* Fallback */
-      --panel-bg: #2e1e11; /* Das dunkle Schokoladen-Braun vom Memory */
-      --border-gold: #d4af37; /* Der Gold-Ton der Rahmen */
-      --text-gold: #ffcc33;
-      --btn-bg: #3e2723;
-      --btn-hover: #5d4037;
-    }
-
-    body {
-      margin: 0;
-      padding: 20px;
-      /* Versucht, den vertikalen Holz-Hintergrund zu simulieren */
-      background-color: #1a1a1a;
-      background-image: repeating-linear-gradient(90deg, #2e2e2e 0px, #2a2a2a 2px, #1a1a1a 40px);
-      font-family: 'MedievalSharp', cursive;
-      color: var(--text-gold);
+    /* --- STIL VON BLOGS.HTML ÜBERNOMMEN --- */
+    body{
+      margin:0;
+      text-align:center;
+      background-color:#2a2a2a;
+      background-image:url('https://www.transparenttextures.com/patterns/wood-pattern.png');
+      font-family:'MedievalSharp',cursive;
+      color:#ffd26a;
       min-height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      box-sizing: border-box;
     }
 
-    .main-frame {
-      /* Der Kasten aus der Memory-Seite */
-      background-color: var(--panel-bg);
-      max-width: 900px;
-      width: 100%;
-      border: 3px solid #5d4037; /* Dezentere Kante außen */
-      border-radius: 15px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.8);
-      padding: 20px;
+    .frame{
+      max-width:1000px;
+      width: 95%;
+      margin:20px auto;
+      border:5px solid #5b3b1d;
+      border-radius:10px;
+      background-color:rgba(40,25,10,0.95);
+      box-shadow:0 0 25px #000;
+      padding:20px;
       position: relative;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
     }
 
-    /* Header im Memory-Stil */
-    .header {
-      width: 100%;
-      text-align: center;
-      margin-bottom: 20px;
-      background: rgba(0,0,0,0.2);
-      border-radius: 10px;
-      padding: 15px 0;
-      border: 1px solid rgba(255, 204, 51, 0.1);
+    header.header{
+      background:linear-gradient(to bottom,#3c2b15,#1a0e05);
+      padding:20px;
+      border-bottom:3px solid #5b3b1d;
+      border-radius: 5px 5px 0 0;
     }
 
-    .header h1 {
-      margin: 0;
-      font-size: 2.5rem;
-      color: var(--text-gold);
-      text-shadow: 2px 2px 4px #000;
+    header.header h1{
+      color:#ffcc33;
+      text-shadow:2px 2px 4px #000;
+      font-size:2.5em;
+      margin:0;
     }
 
-    /* Navigation - Exakt wie Memory */
-    .menu-container {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 12px;
-      margin-bottom: 30px;
+    nav.menu{margin:25px 0;}
+    .btn{
+      display:inline-block;margin:8px;padding:10px 22px;
+      background:#5b3b1d;color:#ffcc33;border:2px solid #d6a85b;
+      border-radius:8px;text-decoration:none;text-shadow:1px 1px 3px #000;
+      box-shadow:inset 0 0 10px #000;transition:all .2s ease;
     }
+    .btn:hover{background:#7a5028;transform:scale(1.05);color:#fff;}
 
-    .nav-btn {
-      text-decoration: none;
-      color: var(--text-gold);
-      font-size: 1.1rem;
-      padding: 8px 20px;
-      background: var(--btn-bg);
-      border: 2px solid var(--border-gold);
-      border-radius: 8px; /* Leicht abgerundet wie auf dem Bild */
-      transition: all 0.2s;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.3);
-    }
-
-    .nav-btn:hover {
-      background: var(--btn-hover);
-      transform: translateY(-2px);
-      box-shadow: 0 6px 10px rgba(0,0,0,0.4);
-    }
-
-    /* --- HERO CONTENT --- */
+    /* --- SPEZIFISCH FÜR INDEX --- */
     .hero-section {
-      text-align: center;
       display: flex;
       flex-direction: column;
       align-items: center;
-      width: 100%;
-    }
-
-    .hero-image-wrapper {
-      position: relative;
-      width: 250px;
-      height: 250px;
-      margin-bottom: 30px;
-      padding: 10px;
-      /* Weißer Rahmen-Effekt wie bei den Memory Karten oder dem linken Bild */
-      background: #fff; 
-      border-radius: 12px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.5);
+      padding: 20px;
     }
 
     .hero-img {
-      width: 100%;
-      height: 100%;
+      width: 280px;
+      height: 280px;
       object-fit: cover;
-      border-radius: 8px;
+      border-radius: 50%;
+      border: 5px solid #d6a85b;
+      box-shadow: 0 0 20px rgba(0,0,0,0.6);
+      margin-bottom: 30px;
     }
 
-    /* Spruch-Box: Angelehnt an die "Spielbeschreibung" Box rechts */
     .quote-container {
-      max-width: 600px;
-      min-height: 100px;
+      background: rgba(0,0,0,0.3);
+      border: 2px dashed #5b3b1d;
+      border-radius: 15px;
+      padding: 20px;
+      min-height: 80px;
+      max-width: 80%;
       display: flex;
       align-items: center;
       justify-content: center;
-      padding: 25px;
-      
-      /* Der Look der Infobox */
-      background: rgba(62, 39, 35, 0.6); /* Dunkleres Braun innen */
-      border: 2px solid var(--border-gold);
-      border-radius: 12px;
-      box-shadow: inset 0 0 15px rgba(0,0,0,0.6);
-      
-      margin-top: 10px;
     }
 
     #quote-text {
-      font-size: 1.4rem;
+      font-size: 1.4em;
+      color: #ffe28a;
       margin: 0;
-      color: var(--text-gold);
-      line-height: 1.5;
       text-shadow: 1px 1px 2px #000;
     }
 
@@ -150,42 +97,41 @@
       display: inline-block;
       width: 2px;
       height: 1.2em;
-      background-color: var(--text-gold);
+      background-color: #ffd26a;
       animation: blink 1s infinite;
-      vertical-align: middle;
       margin-left: 5px;
+      vertical-align: middle;
     }
-
     @keyframes blink { 0%, 100% { opacity: 1; } 50% { opacity: 0; } }
 
-    .footer {
-      margin-top: 30px;
-      font-size: 0.8rem;
-      color: rgba(255, 204, 51, 0.6);
-      text-align: center;
-      width: 100%;
+    .footer{
+      background:#1a0e05;
+      padding:10px;
+      border-top:3px solid #5b3b1d;
+      font-size:0.9em;
+      color:#d6a85b;
+      margin-top:30px;
+      border-radius:0 0 10px 10px;
     }
   </style>
 </head>
 <body>
 
-  <div class="main-frame">
+  <div class="frame">
     <header class="header">
-      <h1>🦆 World of Ducks</h1>
+      <h1>👑 World of Ducks 👑</h1>
     </header>
 
-    <nav class="menu-container">
-      <a href="blogs.html" class="nav-btn">Blogs</a>
-      <a href="memory.html" class="nav-btn">Memory</a>
-      <a href="chat.html" class="nav-btn">Chat</a>
-      <a href="galgenman.html" class="nav-btn">Galgenman</a>
-      <a href="inspo.html" class="nav-btn">Inspo</a>
+    <nav class="menu">
+      <a href="blogs.html" class="btn">Blogs</a>
+      <a href="memory.html" class="btn">Memory</a>
+      <a href="chat.html" class="btn">Chat</a>
+      <a href="galgenman.html" class="btn">Galgenman</a>
+      <a href="inspo.html" class="btn">Inspo</a>
     </nav>
 
     <main class="hero-section">
-      <div class="hero-image-wrapper">
-        <img src="imgs/ente7.jpg" alt="Die Helden-Ente" class="hero-img">
-      </div>
+      <img src="imgs/ente7.jpg" alt="Die Helden-Ente" class="hero-img">
 
       <div class="quote-container">
         <span id="quote-text"></span><span class="cursor"></span>
@@ -193,12 +139,12 @@
     </main>
 
     <footer class="footer">
-      © 2025 World of Ducks – Ein Projekt im Retro-RPG Stil
+      <p>© 2025 World of Ducks – Ein Projekt im Retro-RPG Stil</p>
     </footer>
   </div>
 
   <script>
-    /* --- TYPEWRITER EFFEKT --- */
+    /* --- TYPEWRITER EFFEKT (Gen Z Lingo) --- */
     const quotes = [
       "Main Character Energy geladen. Dein Abenteuer beginnt jetzt. 🚀",
       "Vibe check: bestanden. Zeit, Geschichte zu schreiben, Bestie.",
