--- a/galgenman.html
+++ b/galgenman.html
@@ -171,11 +171,12 @@
     </header>
 
     <nav class="menu">
-      <a href="blogs.html" class="btn">Blogs</a>
+      <a href="index.html" class="btn">Home</a> <a href="blogs.html" class="btn">Blogs</a>
       <a href="memory.html" class="btn">Memory</a>
       <a href="chat.html" class="btn">Chat</a>
       <a href="galgenman.html" class="btn">Galgenman</a>
       <a href="inspo.html" class="btn">Inspo</a>
+      <a href="chinese-zodiac.html" class="btn">CYZ</a> </nav>
     </nav>
 
     <div class="game-area">
