--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
       <a href="chat.html" class="btn">Chat</a>
       <a href="galgenman.html" class="btn">Galgenman</a>
       <a href="inspo.html" class="btn">Inspo</a>
+      <a href="chinese-zodiac.html" class="btn">CYZ</a>
     </nav>
 
     <main class="hero-section">
