Add link to Chinese Zodiac page in memory.html

--- a/memory.html
+++ b/memory.html
@@ -127,6 +127,7 @@
       <a href="chat.html" class="btn">Chat</a>
       <a href="galgenman.html" class="btn">Galgenman</a>
       <a href="inspo.html" class="btn">Inspo</a>
+      <a href="chinese-zodiac.html" class="btn">CYZ</a>
     </nav>
 
     <div class="content">
