--- a/chat.html
+++ b/chat.html
@@ -110,6 +110,7 @@
       <a href="chat.html" class="btn" aria-current="page">Chat</a>
       <a href="galgenman.html" class="btn">Galgenman</a>
       <a href="inspo.html" class="btn">Inspo</a>
+      <a href="chinese-zodiac.html" class="btn">CYZ</a>
     </nav>
 
     <section class="chat-panel">
