--- a/chinese-zodiac.html
+++ b/chinese-zodiac.html
@@ -169,8 +169,9 @@
       <a href="blogs.html" class="btn">Blogs</a>
       <a href="memory.html" class="btn">Memory</a>
       <a href="chat.html" class="btn">Chat</a>
-      <a href="galgenman.html" class="btn">Game</a>
+      <a href="galgenman.html" class="btn">Galgenman</a>
       <a href="inspo.html" class="btn">Inspo</a>
+      <a href="chinese-zodiac.html" class="btn">CYZ</a>
     </nav>
 
     <div class="zodiac-grid">
