--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
     </header>
 
     <nav class="menu">
+      <a href="index.html" class="btn">Home</a>
       <a href="blogs.html" class="btn">Blogs</a>
       <a href="memory.html" class="btn">Memory</a>
       <a href="chat.html" class="btn">Chat</a>
