--- a/inspo.html
+++ b/inspo.html
@@ -305,7 +305,7 @@
       <a href="blogs.html" class="nav-btn">Blogs</a>
       <a href="memory.html" class="nav-btn">Memory</a>
       <a href="chat.html" class="nav-btn">Chat</a>
-      <a href="galgenman.html" class="nav-btn">Game</a>
+      <a href="galgenman.html" class="nav-btn">Galgenman</a>
       <a href="chinese-zodiac.html" class="nav-btn">CYZ</a>
     </nav>
 
