Add 'Inspo' link to navigation menu

--- a/inspo.html
+++ b/inspo.html
@@ -306,6 +306,7 @@
       <a href="memory.html" class="nav-btn">Memory</a>
       <a href="chat.html" class="nav-btn">Chat</a>
       <a href="galgenman.html" class="nav-btn">Galgenman</a>
+      <a href="inspo.html" class="btn">Inspo</a>
       <a href="chinese-zodiac.html" class="nav-btn">CYZ</a>
     </nav>
 
