Refactor navigation menu class names

--- a/inspo.html
+++ b/inspo.html
@@ -300,14 +300,14 @@
       <h1>World of Ducks</h1>
     </header>
 
-    <nav class="menu-container">
-      <a href="index.html" class="nav-btn">Home</a>
-      <a href="blogs.html" class="nav-btn">Blogs</a>
-      <a href="memory.html" class="nav-btn">Memory</a>
-      <a href="chat.html" class="nav-btn">Chat</a>
-      <a href="galgenman.html" class="nav-btn">Galgenman</a>
+    <nav class="menu">
+      <a href="index.html" class="btn">Home</a>
+      <a href="blogs.html" class="btn">Blogs</a>
+      <a href="memory.html" class="btn">Memory</a>
+      <a href="chat.html" class="btn">Chat</a>
+      <a href="galgenman.html" class="btn">Galgenman</a>
       <a href="inspo.html" class="btn">Inspo</a>
-      <a href="chinese-zodiac.html" class="nav-btn">CYZ</a>
+      <a href="chinese-zodiac.html" class="btn">CYZ</a>
     </nav>
 
     <div class="center-piece">
