Update comment for zodiac card styling

--- a/chinese-zodiac.html
+++ b/chinese-zodiac.html
@@ -94,7 +94,7 @@
       padding: 10px;
     }
 
-    /* WICHTIG: Hier ist die Änderung für die Links */
+    /* Link-Karten Styling */
     a.zodiac-card {
       display: block; /* Damit der Link eine Box ist */
       text-decoration: none; /* Keine Unterstreichung */
