Update back button link in blog-marx.html

--- a/blog-marx.html
+++ b/blog-marx.html
@@ -183,7 +183,7 @@
   </div>
 
   <div class="main-frame">
-    <a href="blogs.html" class="back-btn">⬅ Zurück</a>
+    <a href="blogs-mundf.html" class="back-btn">⬅ Zurück</a>
 
     <div class="header-container">
       <h1>Karl Marx & Friends</h1>
