Update blog links and descriptions to 'In Arbeit'

--- a/blogs.html
+++ b/blogs.html
@@ -132,46 +132,40 @@
       bis zu philosophischen Quackereien und wilden Teich-Partys.</p>
 
       <div class="blog-grid">
-        <!-- Politik -->
-        <a href="#" class="blog-card">
+        <a href="wip.html" class="blog-card">
           <img src="imgs/ente1.webp" alt="Politik-Ente">
           <h3>🐣 Politik</h3>
-          <p>Neueste Analysen über Enten-Demokratien, Wahlkampffutter und Wasserteich-Propaganda.</p>
+          <p>Neueste Analysen über Enten-Demokratien. (In Arbeit)</p>
         </a>
 
-        <!-- Karl Marx & Friends -->
-        <a href="blog-marx.html" class="blog-card">
+        <a href="blogs-mundf.html" class="blog-card">
           <img src="imgs/ente4.jpg" alt="Karl Marx Ente">
           <h3>📚 Karl Marx & Friends</h3>
-          <p>Philosophische Diskussionen über Kapitalismus im Ententeich und die Revolution der Federn.</p>
+          <p>Philosophische Diskussionen & Manuskripte.</p>
         </a>
 
-        <!-- Enten -->
-        <a href="#" class="blog-card">
+        <a href="wip.html" class="blog-card">
           <img src="imgs/enten6.jpg" alt="Entenleben">
           <h3>🦆 Enten</h3>
-          <p>Alles rund ums Quacken, Schwimmen und Fliegen – Lifestyle aus dem Entenalltag.</p>
+          <p>Lifestyle aus dem Entenalltag. (In Arbeit)</p>
         </a>
 
-        <!-- Party -->
-        <a href="#" class="blog-card">
+        <a href="wip.html" class="blog-card">
           <img src="imgs/ente2.jpg" alt="Party Ente">
           <h3>🎉 Party</h3>
-          <p>Von Teichraves bis Federfestivals: Die besten Spots für durchgeknallte Entenpartys!</p>
+          <p>Die besten Spots für Teichraves. (In Arbeit)</p>
         </a>
 
-        <!-- Soccer -->
-        <a href="#" class="blog-card">
+        <a href="wip.html" class="blog-card">
           <img src="imgs/ente7.jpg" alt="Soccer Ente">
           <h3>⚽ Soccer</h3>
-          <p>Duckball News: Quack United siegt erneut gegen Pondchester City – alle Highlights hier!</p>
+          <p>Duckball News & Ergebnisse. (In Arbeit)</p>
         </a>
 
-        <!-- Wirtschaft -->
-        <a href="#" class="blog-card">
+        <a href="wip.html" class="blog-card">
           <img src="imgs/entedollar.avif" alt="Wirtschaft Ente">
           <h3>💰 Wirtschaft</h3>
-          <p>Vom Federmarkt bis zur Brotkrumenbörse – hier wird Kapitalismus neu bequackt.</p>
+          <p>Vom Federmarkt bis zur Brotkrumenbörse. (In Arbeit)</p>
         </a>
       </div>
     </main>
@@ -182,4 +176,3 @@
   </div>
 </body>
 </html>
-
