--- a/blogs.html
+++ b/blogs.html
@@ -133,39 +133,39 @@
 
       <div class="blog-grid">
         <a href="wip.html" class="blog-card">
-          <img src="imgs/ente1.webp" alt="Politik-Ente">
-          <h3>🐣 Politik</h3>
+          <img src="imgs/politik-ente.jpeg" alt="Politik-Ente">
+          <h3>🐣 Politik und Wirtschaft</h3>
           <p>Neueste Analysen über Enten-Demokratien. (In Arbeit)</p>
         </a>
 
         <a href="blogs-mundf.html" class="blog-card">
-          <img src="imgs/ente4.jpg" alt="Karl Marx Ente">
+          <img src="imgs/marxente.jpeg" alt="Karl Marx Ente">
           <h3>📚 Karl Marx & Friends</h3>
           <p>Philosophische Diskussionen & Manuskripte.</p>
         </a>
 
         <a href="wip.html" class="blog-card">
-          <img src="imgs/enten6.jpg" alt="Entenleben">
-          <h3>🦆 Enten</h3>
-          <p>Lifestyle aus dem Entenalltag. (In Arbeit)</p>
+          <img src="imgs/ente-ente.jpeg" alt="Entenleben">
+          <h3>🦆 Frank Rosin</h3>
+          <p>Tipps und Tricks in der Küche (In Arbeit)</p>
         </a>
 
         <a href="wip.html" class="blog-card">
-          <img src="imgs/ente2.jpg" alt="Party Ente">
+          <img src="imgs/party-ente.jpeg" alt="Party Ente">
           <h3>🎉 Party</h3>
           <p>Die besten Spots für Teichraves. (In Arbeit)</p>
         </a>
 
         <a href="wip.html" class="blog-card">
-          <img src="imgs/ente7.jpg" alt="Soccer Ente">
+          <img src="imgs/soccer-ente.jpeg" alt="Soccer Ente">
           <h3>⚽ Soccer</h3>
           <p>Duckball News & Ergebnisse. (In Arbeit)</p>
         </a>
 
         <a href="wip.html" class="blog-card">
-          <img src="imgs/entedollar.avif" alt="Wirtschaft Ente">
-          <h3>💰 Wirtschaft</h3>
-          <p>Vom Federmarkt bis zur Brotkrumenbörse. (In Arbeit)</p>
+          <img src="imgs/kunst-ente.jpeg" alt="Wirtschaft Ente">
+          <h3>🎬 Film und Kunst</h3>
+          <p>Von Leonardo Da Vinci bis Di Caprio. (In Arbeit)</p>
         </a>
       </div>
     </main>
