Add new article link for 'Feldversuch Welt'

--- a/blogs-mundf.html
+++ b/blogs-mundf.html
@@ -121,6 +121,17 @@
 
     <div class="article-list">
       
+      <a href="blog-welt.html" class="article-item">
+        <div class="item-left">
+          <div class="item-icon">🗞️</div>
+          <div class="item-content">
+            <h2>Feldversuch „Welt“</h2>
+            <span>Anatomie einer Stimmungsmache.</span>
+          </div>
+        </div>
+        <div class="status-badge">Analyse</div>
+      </a>
+
       <a href="blog-marx.html" class="article-item">
         <div class="item-left">
           <div class="item-icon">📜</div>
