--- a/blog-welt.html
+++ b/blog-welt.html
@@ -84,7 +84,7 @@
     .essay-content {
       line-height: 1.9;
       font-size: 1.2rem;
-      text-align: justify;
+      text-align: justify; /* Das sorgt für Blocksatz im Text */
     }
 
     h2 { 
@@ -93,6 +93,7 @@
       margin-top: 40px; 
       border-bottom: 1px solid rgba(0,0,0,0.1);
       padding-bottom: 5px;
+      text-align: left; /* WICHTIG: Verhindert, dass Überschriften gedehnt werden */
     }
 
     /* Spezifische Formatierung für die Analyse-Punkte */
@@ -120,6 +121,18 @@
       text-decoration: none;
     }
 
+    .author-sign {
+      margin-top: 60px;
+      text-align: right;
+      font-family: 'MedievalSharp', cursive;
+      font-size: 1.1rem;
+      color: #555;
+      border-top: 1px solid rgba(0,0,0,0.1);
+      padding-top: 10px;
+      display: inline-block;
+      float: right;
+    }
+
   </style>
 </head>
 <body>
@@ -141,17 +154,17 @@
         Der Ausgangspunkt ist ein Experiment: Die Prüfung meines Vorurteils „schlechter Journalismus“ anhand der aktuellen Startseite der Welt und des ersten Artikels, der mir sinnbildlich für die Welt ins Auge fällt. Das Ergebnis bestätigt meinen Verdacht, ist jedoch präziser zu fassen: Das Problem ist nicht die konservative Ausrichtung allein, sondern die systematische Prozesskette von emotionalem Trigger, logischer Verzerrung, politischer Agenda (Campaigning) und der Duldung einer antidemokratischen Echokammer.
       </p>
 
-      <h2>Der Fall Hoeneß</h2>
+      <h2>1. Der Fall Hoeneß</h2>
       <p>
         Zunächst fiel mir der am prominentesten beworbene Artikel der Startseite ins Auge: Die Rehabilitierung von Macht (Der Fall Hoeneß). Die Beobachtung des Teasers zu einer Interviewreihe mit Uli Hoeneß offenbart ein spezifisches Verständnis von Autorität: Ein verurteilter Steuerhinterzieher wird unkritisch als Experte für „Gehaltsexplosionen“ und „Machtspiele“ inszeniert. Das Problem ist nicht, dass Hoeneß interviewt wird, denn er ist im Fußballgeschäft durchaus eine relevante Figur. Das Problem ist das Framing: die Welt betreibt eine implizite Reinwaschung: indem sie Hoeneß ohne Kontextualisierung seiner Straftaten, die gerade im Kontext von Geld relevant wären, als edlen Staatsmann des Fußballs präsentiert, bedient sie die Sehnsucht nach „starken Männern“, denen man moralische Verfehlungen verzeiht, solange der Erfolg stimmt. Journalismus verkommt hier zur Hofberichterstattung.
       </p>
 
-      <h2>Schlagzeilen-Drama (Agenda Setting)</h2>
+      <h2>2. Schlagzeilen-Drama (Agenda Setting)</h2>
       <p>
         Ein Blick über die Startseite (Duvall-Tod, Bahnchaos, Einbürgerungsrekorde, Putin, AfD-Vetternwirtschaft) zeigt ein Muster in der Themenauswahl. Die Titel sind konsequent negativ, konfliktorientiert und/oder emotionalisierend. Nachrichtenseiten leben (leider) natürlich von Konflikten, das ist branchenüblich. Bei der Welt fällt jedoch auf, dass Schlagzeilen vor allem so konstruiert sind, dass sie ein Gefühl des Kontrollverlustes (Bahn, Putin, Einbürgerung) erzeugen. Es fehlen lösungsorientierte Ansätze. Der Leser soll scheinbar nicht informiert werden, sondern in einen Zustand der permanenten Alarmbereitschaft versetzt werden. Dies bindet Aufmerksamkeit durch negative Affekte.
       </p>
 
-      <h2>Konstruiertes Bedrohungsszenario (der Einbürgerungsartikel)</h2>
+      <h2>3. Konstruiertes Bedrohungsszenario (der Einbürgerungsartikel)</h2>
       <p>
         <small>(<a href="https://www.welt.de/politik/deutschland/article69931c72f1c55d28ade69f9a/deutsche-staatsangehoerigkeit-rekordzahlen-bei-einbuergerungen-cdu-verlangt-stopp-wegen-betrugsverdachts.html" class="text-link" target="_blank">Zum Artikel</a>)</small>
       </p>
@@ -190,6 +203,10 @@
       <p>
         Wer Streit sät, erntet Hass. Die Welt liefert in diesem Fallbeispiel die Saat. Sie nutzt valide Fakten (Einzelfälle von Betrug), um eine invalide Realitätswahrnehmung (der Staat verrät das Volk an Ausländer) zu erzeugen. Die Kommentarspalte ist dabei kein Zufall, sondern das logische Produkt dieser Berichterstattung. Die Zeitung fungiert als Durchlauferhitzer: Oben wird konservative Skepsis eingefüllt, unten fließt offener Hass auf den Rechtsstaat heraus. Es ist kein Journalismus, der aufklärt, sondern einer, der aufwiegelt.
       </p>
+
+      <div class="author-sign">
+        ~ Anonyme Autorschaft
+      </div>
 
     </div>
   </div>
