Add article link about Uli Hoeneß
Added a link to an article about Uli Hoeneß in the blog post.

--- a/blog-welt.html
+++ b/blog-welt.html
@@ -156,6 +156,10 @@
 
       <h2>1. Der Fall Hoeneß</h2>
       <p>
+        <small>(<a href="https://www.welt.de/sport/fussball/bundesliga/fc-bayern-muenchen/plus69930a18d5f9f0ad1f6e8d8b/uli-hoeness-nach-einer-minute-schmissen-sie-breitner-und-mich-aus-dem-buero.html" class="text-link" target="_blank">Zum Artikel</a>)</small>
+      </p>
+      
+      <p>
         Zunächst fiel mir der am prominentesten beworbene Artikel der Startseite ins Auge: Die Rehabilitierung von Macht (Der Fall Hoeneß). Die Beobachtung des Teasers zu einer Interviewreihe mit Uli Hoeneß offenbart ein spezifisches Verständnis von Autorität: Ein verurteilter Steuerhinterzieher wird unkritisch als Experte für „Gehaltsexplosionen“ und „Machtspiele“ inszeniert. Das Problem ist nicht, dass Hoeneß interviewt wird, denn er ist im Fußballgeschäft durchaus eine relevante Figur. Das Problem ist das Framing: die Welt betreibt eine implizite Reinwaschung: indem sie Hoeneß ohne Kontextualisierung seiner Straftaten, die gerade im Kontext von Geld relevant wären, als edlen Staatsmann des Fußballs präsentiert, bedient sie die Sehnsucht nach „starken Männern“, denen man moralische Verfehlungen verzeiht, solange der Erfolg stimmt. Journalismus verkommt hier zur Hofberichterstattung.
       </p>
 
